assets/scss/organisms/hero/_news-centre-hero.scss
.news-centre-hero {
    margin-top: 115px;
    padding-top: 50px;
    padding-bottom: 50px;

    @include breakpoint(medium down) {
        margin-top: 70px;
        padding-top: 40px;
    }

    .news-hero-container {
        display: flex;
        position: relative;

        flex-direction: column;

        .breadcrumb {
            color: $red;
        }

        .subtitle {
            margin-top: 115px;

            @include breakpoint(medium down) {
                margin-top: 40px;
                margin-left: 25px;
            }

            @include breakpoint(small down) {
                font-weight: normal;
            }
        }

        .title {
            max-width: 300px;
            position: absolute;
            top: calc(50% - 130px);
            text-transform: uppercase;
            font-family: $secondary-font;

            @include breakpoint(medium down) {
                top: auto;
                margin-top: 13px;
                margin-left: 25px;
                position: relative;
            }
        }

        .title,
        .subtitle {
            @include breakpoint(small down) {
                font-size: 25px;
            }
        }
    }

    .hero-link {
        margin-top: auto;
        padding: 25px 30px;
        background: $dark-blue-6;

        @include breakpoint(medium down) {
            display: none;
        }

        &.mobile {
            display: block;
        }

        .link-title {
            font-size: 2rem;
            font-weight: $regular;
        }

        .text-link {
            margin-top: 30px;
        }
    }

    .news-hero-container-mobile {
        display: none;

        @include breakpoint(medium down) {
            width: 100%;
            display: block;
        }
    }

    .image-container {
        padding-left: 25px;

        img {
            width: 100%;
        }

        @include breakpoint(medium down) {
            padding-left: 0;
            margin-top: 35px;
        }
    }
}

